--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["actor", "async", "tokio"]
 [dependencies]
 async-trait = "0.1"
 dyn-clone = "1"
+thiserror = "1"
 tokio = { features = ["macros", "rt", "sync"], version = "1" }
 yaaf-macros = { path = "macros", version = "0.1.0" }
 
