--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tokio = { features = ["macros", "rt", "sync"], version = "1" }
 yaaf-macros = { path = "macros", version = "0.2.0" }
 
 [dev-dependencies]
-tokio = { features = ["rt-multi-thread"], version = "1" }
+tokio = { features = ["rt-multi-thread", "time"], version = "1" }
 trybuild = "1"
 
 [workspace]
