Reorganize CI workflow to fix coverage

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  ci:
+  build-test:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
@@ -26,7 +26,6 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
-          components: rustfmt, clippy
 
       - uses: actions-rs/cargo@v1
         with:
@@ -35,6 +34,18 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  lint:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
 
       - uses: actions-rs/cargo@v1
         with:
@@ -46,11 +57,30 @@ jobs:
           command: clippy
           args: -- -D warnings
 
+  coverage:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
       - name: Installing grcov
         uses: actions-rs/install@v0.1
         with:
           crate: grcov
           use-tool-cache: true
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features --no-fail-fast
+        env:
+          CARGO_INCREMENTAL: '0'
+          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+          RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
 
       - name: Gather coverage data
         id: coverage
@@ -67,7 +97,7 @@ jobs:
 
   coveralls_finalize:
     runs-on: ubuntu-20.04
-    needs: ci
+    needs: coverage
     steps:
       - name: Coveralls finalization
         uses: coverallsapp/github-action@master
